# etl_dbf_oracle

./: .gitignore  README.md  TEST_DBF_XLSX.xlsx  main.py  pyproject.toml  requirements.txt
config/: table_config.yaml
etl_dbf_oracle/: __init__.py
etl_dbf_oracle/config/: __init__.py  table_config.py
etl_dbf_oracle/database/: __init__.py  connection.py  operations.py  schema.py
etl_dbf_oracle/etl/: __init__.py  extractors.py  loaders.py  pipeline.py  quality_checker.py  transformers.py
etl_dbf_oracle/utils/: __init__.py  helpers.py  logging_config.py  safe_dataframe.py
sql/: custom_query.sql
